--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,3 +60,60 @@ body {
 		stroke-dashoffset: -20;
 	}
 }
+
+.custom-prev,
+.custom-next {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	background-color: rgba(0, 0, 0, 0.5);
+	color: white;
+	padding: 10px;
+	cursor: pointer;
+	z-index: 10;
+}
+
+.custom-prev {
+	left: 10px;
+}
+
+.custom-next {
+	right: 10px;
+}
+
+.custom-pagination {
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	justify-content: center;
+	z-index: 10;
+	gap: 15px;
+	width: 50px;
+}
+
+.swiper-pagination-bullet {
+	position: relative;
+	width: 20px !important;
+	height: 10px !important;
+	background-color: white !important;
+	border-radius: 2px !important;
+	opacity: 0.7;
+	transition:
+		opacity 0.3s,
+		background-color 0.3s;
+}
+
+.swiper-pagination-bullet-active {
+	opacity: 1;
+	background-color: #000;
+}
+
+.swiper-pagination-fraction,
+.swiper-pagination-custom,
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+	/* background-color: red; */
+	position: relative;
+	width: min-content !important;
+}
