--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -275,3 +275,26 @@ body {
 	background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
+
+.link-button::before,
+.link-button::after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	left: 0;
+	bottom: 0;
+	height: 2px;
+	transition: transform 0.5s ease-in-out;
+}
+
+.link-button::before {
+	transform: translateX(-212%);
+}
+
+.link-button:hover::before {
+	transform: translateX(0);
+}
+
+.link-button:hover::after {
+	transform: translateX(212%);
+}
