--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -320,6 +320,8 @@ body {
 	--bg-color: #ffffff;
 	--text-color: #000000;
 	--primary-color: #007bff;
+	--border-color: #cccccc;
+	--selected-color: #e0f7ff;
 	background-color: var(--bg-color);
 	color: var(--text-color);
 }
@@ -329,6 +331,8 @@ body {
 	--bg-color: #000000;
 	--text-color: #ffffff;
 	--primary-color: #1e90ff;
+	--border-color: #444444;
+	--selected-color: #333333;
 	background-color: var(--bg-color);
 	color: var(--text-color);
 }
@@ -338,10 +342,11 @@ body {
 	--bg-color: #121212;
 	--text-color: #e0e0e0;
 	--primary-color: #bb86fc;
+	--border-color: #2a2a2a;
+	--selected-color: #1a1a1a;
 	background-color: var(--bg-color);
 	color: var(--text-color);
 }
-
 html {
 	overflow-y: scroll;
 }
